minor edits to worksheet for lab 7

--- a/worksheets/ws_lab07.Rmd
+++ b/worksheets/ws_lab07.Rmd
@@ -130,7 +130,7 @@ d. Did the mean of the sampling distribution get bigger, smaller, or stay about 
 
 Run the following chunk of code to draw a single random sample of 50 people from the NHANES dataset, then calculate the sample proportion and save the result under the name `p_hat`.
 
-```{r}
+```{r get_samp_size50}
 my_sample <- nhanes %>%
     slice_sample(n = 50)
 
@@ -142,13 +142,13 @@ p_hat <- my_sample %>%
 
 Fill in the blanks in the following chunk to help you calculate the standard error based on the `p_hat` from your sample.  *Hint:* This is about translating the formula in step 3 above into R code; two of the blanks should be filled with the *name* of a value you just saved.
 
-```{r eval = FALSE}
+```{r calc_std_error}
 standard_error <- sqrt((___ * (1 - ___)) / ___)
 ```
 
 Now use the following chunk to help you find the 95% confidence interval (again, this is about translating the formula in step 4 above into R, and you'll be able to use the *names* of values you've already saved).
 
-```{r eval = FALSE}
+```{r calc_95_ci}
 c(___ - 1.96 * ___, ___ + 1.96 * ___)
 ```
 
