--- a/book.bib
+++ b/book.bib
@@ -1,3 +1,22 @@
+@Article{WixtedEtAl2016,
+    author = {John T. Wixted and Laura Mickes and John C. Dunn and Steven E. Clark and William Wells},
+    title = {Estimating the reliability of eyewitness identifications from police lineups},
+    year = 2016,
+    journal = {Proceedings of the National Academy of Sciences},
+    volume = 113,
+    number = 2,
+    pages = {304--309}
+}
+
+@Article{GepshteinEtAl2020,
+    author = {Sergei Gepshtein and Yurong Wang and Fangchao He and Dinh Diep and Thomas D. Albright},
+    title = {A perceptual scaling approach to eyewitness identification},
+    year = 2020,
+    journal = {Nature Communications},
+    volume = 11,
+    number = 3380
+}
+
 @Article{Milgram1963,
     author = {Stanley Milgram},
     title = {Behavioral Study of Obedience},
